# rust_examples

00_rust_book/: 01_guess_game.rs  02_tests.rs
01_array/: 01_max_consecutove1.rs  02_number_with_even_digits.rs  03_duplicate_zeroes.rs  04_merge_sorted_arrays.rs  05_remove_element.rs  06_remove_duplicates.rs  07_if_N_and_2N_exist.rs  08_mountain_array.rs  09_replace_with_the_right_greatest.rc  10_sort_by_parity.rs  11_third_max_element.rs  12_find_disappeared_nums.rs  13_sort_colors.rs  14_add_digits.rs  15_min_diffs.rs  16_sign_of_array.rs  17_array_diff.rs  18_two_sum.rs  19_valid_parentheses.rs  20_spiral_matrix.rs  21_spiral_matrix_2.rs  22_game_losers.rs  23_buy_stock1.rs  24_check_straight_line.rs  25_min_flips.rs  26_filter_vec.rs  27_max_pair_sum.rs  28_sort_squares.rs  29_sort_by_hamming_weight.rs  30_remove_duplicates_2.rs  31_image_smoother.rs  32_max_square_area.rs  33_redistribute_chars.rs  34_convert_arr_into_2Darr.rs
01_math/: 01_cell_distance.rs  02_distribute_candies_2.rs
02_string/: 01_sum_of_digits.rs  02_some_none.rs  03_fizzbuzz.rs  04_atoi.rs  05_longest_common_prefix.rs  06_remove_AB_CD.rs  07_shortest_word.rs  08_longest_semirepet_substr.rs  09_count_pairs.rs  10_sort_vowels.rs  11_split_strings.rs  12_anagrams.rs  13_furthest_Point_From_Origin.rs  14_min_penalty.rs  15_len_of_last_word.rs  16_isomorphic_strings.rs  17_max_odd_number.rs  18_find_unique_bin_string.rs  19_prefix_sum.rs  20_decode_string.rs
03_oop/: 01_trait.rs  02_fn_trait.rs
12_reqwest/02_health_check/: Cargo.toml
12_reqwest/02_health_check/src/: main.rs
(+47 files in other folders)
