[package]
name = "health_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
reqwest = {version = "0.11.18", features = ["blocking"]}
url = {version = "2.4.0"}